feat(api): added kubernetes endpoints to api
